--- a/TeamCode/src/main/res/xml/config.xml
+++ b/TeamCode/src/main/res/xml/config.xml
@@ -33,7 +33,8 @@
             <goBILDA5202SeriesMotor name="flywheel2" port="2"/>
             <goBILDA5202SeriesMotor name="left_back" port="3"/>
 
-            <SparkFunOTOS name="OTOS" port="0" bus="2"/>
+            <SparkFunOTOS name="sensor_otos" port="0" bus="0"/>
+            
 
 
             <!--This line signifies that the Control Hub configuration has ended.-->
